# amnosia

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
benches/: search_bench.rs
benches/testing_data/: file_100k.test  file_10k.test
src/: command.rs  commands.rs  lib.rs  main.rs  other_commands.rs  reminder.rs  reminder_list.rs  todo.rs
